Minor fix to collapse all button

--- a/static/index.css
+++ b/static/index.css
@@ -64,6 +64,7 @@ h1, h2, h3, h4, h5, h6 {
 div {
     width: 80%;
     min-width: 200px;
+    max-width: 800px;
     margin: 0 auto;
     border: 1px solid black;
     padding: 5px;
